# deepgrampp

./: .gitignore  CMakeLists.txt  README.md  audio-output.raw  test.raw
cmake/: patch-libwebsockets-mbedtls-extensions.cmake
deepgrampp/: CMakeLists.txt  deepgram.cpp  deepgram.hpp  listen-ws-impl-boost.hpp  listen-ws-impl.hpp  listen-ws.cpp  listen-ws.hpp  listen.hpp  speak-ws-impl-boost.hpp  speak-ws.cpp  speak.hpp
deepgrampp/include/deepgrampp/: deepgram.hpp  listen-flux.hpp  listen-rest.hpp  listen-ws.hpp  listen.hpp  speak-rest.hpp  speak-ws.hpp  speak.hpp
deepgrampp/include/deepgrampp/transport/: curl_http_transport.hpp  http_transport.hpp  lws_websocket_transport.hpp  websocket_transport.hpp
deepgrampp/src/: listen-flux.cpp  listen-rest.cpp  listen-ws-impl-boost.hpp  listen-ws.cpp  speak-rest.cpp  speak-ws-impl-boost.hpp  speak-ws.cpp
deepgrampp/src/impl/: listen-flux-impl-boost.hpp  listen-flux-impl-lws.hpp  listen-rest-impl-curl.hpp  listen-ws-impl-boost.hpp  listen-ws-impl-lws.hpp  speak-rest-impl-curl.hpp  speak-ws-impl-boost.hpp  speak-ws-impl-lws.hpp
deepgrampp/transport/: curl_http_transport.cpp  lws_websocket_transport.cpp
deepgrampp_lib/: CMakeLists.txt  deepgram.cpp  deepgram.hpp
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/listen/: CMakeLists.txt  main.cpp
examples/listen-flux/: CMakeLists.txt  main.cpp
examples/listen-rest/: CMakeLists.txt  main.cpp  sample_speech.raw
examples/speak/: CMakeLists.txt  main.cpp
examples/speak-rest/: CMakeLists.txt  main.cpp
